# rag-engine

./: .env  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docker/: .env  docker-compose.yml
docker/postgres/: init.sql
docs/: design-decisions.md
docs/adr/: ADR-001-dockerized-postgresql.md  ADR-002-pydantic-settings.md  ADR-003-uv-package-manager.md  ADR-004-pdf-parsing-library.md  ADR-004-psycopg3.md  ADR-005-recursive-character-based-chunking.md  ADR-007-vector-store.md  ADR-008-separate-query-embedding-and-retrieval-boundaries.md  ADR-009-structured-prompt-augmentation.md  ADR-010-local-llm-integration-with-ollama.md  ADR-011-rag-pipeline-orchestration.md  ADR-012-api-exposure-and-composition-root.md  ADR-013-ingestion-pipeline-orchestration.md  ADR-014-document-upload-adapter.md  ADR-015-application-observability.md  adr-006-local-embedding-model.md
docs/architecture/: sprint-01-foundation.md  sprint-02-database-connectivity.md  sprint-03-document-loading.md  sprint-04-document-chunking.md  sprint-05-embeddings.md  sprint-06-vector-storage.md  sprint-07-retrieval.md  sprint-08-prompt-augmentation.md  sprint-09-llm-integration.md  sprint-10-rag-pipeline-orchestration.md  sprint-11-api-exposure.md  sprint-12-ingestion-pipeline-orchestration.md  sprint-13-document-ingestion-api.md  sprint-14-observability.md
rag_engine/api/: app.py  dependencies.py
rag_engine/chunker/: chunk.py  document_chunker.py  recursive_document_chunker.py
rag_engine/composition/: application.py
rag_engine/config/: settings.py
rag_engine/database/: connection.py
rag_engine/llm/: llm.py  (+3 more)
(+71 files in other folders)
