[project]
name = "rag-engine"
version = "0.1.0"
description = "A production-oriented Retrieval-Augmented Generation (RAG) engine built from scratch to understand the complete RAG pipeline."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.27.2.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
